# Differential-Equation-Solver

./: .gitignore  CMakeLists.txt
examples/: 2nd_order.cpp  heat_1d.cpp
include/: solver.hpp  types.hpp
include/Steppers/: euler_stepper.hpp  midpoint_stepper.hpp  rk3_stepper.hpp  rk4_stepper.hpp  rk5_stepper.hpp
include/pde/: heat_equation.hpp
python/: 2d_heat_animation.py  2d_heat_equation.py  2nd_order.py  compare_steppers.py  plot_animate.py  plotter.py  predator_prey.py
src/: bindings.cpp  solver.cpp
src/Steppers/: euler_stepper.cpp  midpoint_stepper.cpp  rk3_stepper.cpp  rk4_stepper.cpp  rk5_stepper.cpp
src/pde/: heat_equation.cpp
